# rescore

./: .gitignore  README.md  pyproject.toml  run.py
config/: sinfonia10.json
docs/: ARCHITECTURE.md  USAGE.md
scripts/: extract_movement1_page.py  inventory_movement1_pages.py
src/rescore/: __init__.py  choros9.py  cli.py  mscz.py  musicxml.py  normalize.py  pages.py  pdf.py  pipeline.py  scan.py  tooling.py
tests/: test_choros9.py  test_mscz_meter.py  test_musicxml.py  test_normalize.py  test_pages.py  test_reference.py  test_scan.py
